# rust-102

./: README.md  contact.txt  links.txt  mts-plan.txt
01-recap/error-handling/src/: main.rs
01-recap/macros/: Cargo.toml
01-recap/macros/lib1/: Cargo.toml
01-recap/rust-packages/p1/: Cargo.toml
02-async/code-examples/: Cargo.toml
03-fullstack/: REST-api-design.txt
03-fullstack/scenario1/httpserver/: Cargo.toml
03-fullstack/tutor-service/: .env  Cargo.toml
04-REST-graphQL-gRPC/graphQL-intro/sessions-graph-service/: package-lock.json  package.json
04-REST-graphQL-gRPC/graphQL-intro/speakers-rest-service/: REST-api.txt
04-REST-graphQL-gRPC/rest-graphql/: Cargo.toml  graphql-api-test.md  schema.grpahql
05-rust-kafka-clients/: Cargo.toml  docker-compose.yml
05-rust-kafka-clients/src/: main.rs
REST-graphQL-gRPC/calculator/: Cargo.toml  build.rs  grpc-test.md
REST-graphQL-gRPC/rest-graphql/: graphql-api-test.md
calculator/proto/: calculator.proto
calculator/src/: main.rs
connectivity-apis/: Cargo.toml
ffi/: mathlib.c  mathlib.h
ffi/ffi_c_to_rust/: Cargo.toml  build.rs
ffi/ffi_c_to_rust/src/: main.rs
fullstack/ezytutors/: Cargo.toml
fullstack/ezytutors-ng-ui/: README.md  angular.json  package-lock.json  package.json
fullstack/ezytutors-ng-ui/src/: index.html
fullstack/ezytutors/tutor-db/: .env  Cargo.toml  database.sql
fullstack/ezytutors/tutor-db/src/: main.rs
fullstack/ezytutors/tutor-nodb/: Cargo.toml
fullstack/scenario1/: Cargo.toml
graphQL-intro/sessions-graph-service/: app.js
graphQL-intro/sessions-graph-service/resolvers/: index.js
graphQL-intro/speakers-rest-service/: app.js  package-lock.json  package.json  swagger.json
graphQL-intro/speakers-rest-service/data/: speakers.json
graphQL-intro/speakers-rest-service/routes/: speakers.js
macros/p1/src/: main.rs
money-transfer-system/: Cargo.toml  db-schema.sql
money-transfer-system/src/: api.rs  main.rs  models.rs  repository.rs  service.rs
money-transfer-system/src/iter1/: api.rs  model.rs  repository.rs  service.rs
money-transfer-system/src/iter2/: service.rs
money-transfer-system/src/iter3/: api.rs  db.rs  kafka.rs  repository.rs  service.rs
recap/macros/p1/: Cargo.toml
recap/rust-packages/p2/: Cargo.toml
rest-graphql/: rest-api-test.md
rust-workspace/: Cargo.toml  README.md
rust-workspace/p1/src/: main.rs
rust-workspace/p2/src/: main.rs
rust-workspace/p3/: Cargo.toml
wasm_calculator/: Cargo.toml  index.html
wasm_calculator/src/: lib.rs
wasm_client/: Cargo.toml  index.html
wasm_client/src/: lib.rs
(+18 files in other folders)
