[package]
name = "money_transfer_system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = {version = "0.6.2", default-features = false, features = ["postgres","runtime-tokio-native-tls", "macros","chrono"]}
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
