[package]
name = "money_transfer_system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = {version = "0.6.2", default-features = false, features = ["postgres","runtime-tokio-native-tls", "macros","chrono"]}
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }


validator = "0.16"
validator_derive = "0.16"

log = "0.4"
env_logger = "0.10"


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

rdkafka = { version = "0.29" }

actix-cors = "0.6"