[package]
name = "rest-graphql"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.0"                     
async-graphql = "5.0"                  
async-graphql-actix-web = "5.0"        
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }     

[build-dependencies]